--- a/nginx-app/static/index.html
+++ b/nginx-app/static/index.html
@@ -12,5 +12,6 @@
     <h2>it a test3</h2>
     <h2>it a test7</h2>
     <h2>it a test 16 52!!!!!</h2>
+    <h2>it a test 16 52!!!!!</h2>
 </body>
 </html>
